--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=lisaanna
+
+# port (:9001) behövs oftast specifieras på Windows-maskiner
+# spring.datasource.url=jdbc:hsqldb:hsql://localhost:9001/mydb
+spring.datasource.url=jdbc:hsqldb:hsql://localhost/grouptwo
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
